# cs4all-backend

./: .env.example  AGENTS.md  README.md  pyproject.toml
app/: main.py
app/api/v1/: admin.py  grade.py  health.py  hint.py
app/core/: auth.py  config.py  logging.py
app/schemas/: admin.py  grading.py  hint.py
app/services/: github.py  grading_prompt.py  hint_process.py  hint_prompt.py  llm.py  redis_client.py  supabase.py
app/workers/: __init__.py  grading_worker.py
docs/: walkthrough3-5.md
supabase/migrations/: 20260221000000_create_profiles.sql  20260221000001_create_user_progress.sql  20260221000002_create_exercise_submissions.sql  20260221000003_add_is_admin_to_profiles.sql  20260223000000_add_grading_failed_status.sql
